// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileSave should render 1`] = `
<body>
  <div>
    <div
      class="file-save"
    >
      <button
        class="icon-button icon-button-medium"
        type="button"
      >
        <svg>
          save.svg
        </svg>
        <div
          class="icon-button-tooltip"
        >
          Save file
        </div>
      </button>
    </div>
  </div>
</body>
`;

exports[`FileSave should render with popup 1`] = `
<body>
  <div>
    <div
      class="file-save"
    >
      <button
        class="icon-button icon-button-medium"
        type="button"
      >
        <svg>
          save.svg
        </svg>
        <div
          class="icon-button-tooltip"
        >
          Save file
        </div>
      </button>
      <div
        class="file-save-dialog"
        data-testid="file-save-dialog"
      >
        <div
          class="file-save-dialog-header"
        >
          Name File
          <button
            class="icon-button icon-button-medium"
            type="button"
          >
            <svg>
              x.svg
            </svg>
          </button>
        </div>
        <div
          class="file-save-dialog-input-wrapper"
        >
          <input
            class="file-save-dialog-input-field"
            placeholder="File name"
            type="text"
            value="File Name"
          />
          
        </div>
        <div
          class="file-save-dialog-button"
        >
          <button
            class="button button-primary"
            type="button"
          >
            Save
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;
